@@ -1,6 +1,7 @@
 useDynLib(spacodiR)
 export(
 add.transparency,
+apd,
 as.phylocom,
 as.picante,
 as.spacodi,
