@@ -1,4 +1,8 @@
 CHANGES IN spacodiR VERSION 0.11
+2011-06-21
+  * added apd() for abundance phylogenetic deviation (sensu HARDY 2008 J Ecol)
+  * storing repository at https://github.com/eastman/spacodiR
+
 2011-04-01
   * added cophen() for rapid computation of the cophenetic matrix 
   * released to CRAN
